Fix background overflow

--- a/src/styles/PokeDetails.css
+++ b/src/styles/PokeDetails.css
@@ -1,4 +1,5 @@
 .poke-details-container {
+  background-color: white;
   max-width: 600px;
   margin: 0 auto 10px;
   overflow: hidden;
